/*
 * $Id: ChangeLog,v 1.3329 2004/08/23 15:39:49 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-08-24 00:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/tests/i18ntest.prg
  + xharbour/tests/i18n/pl_PL.hit
    + Polish language added

2004-08-23 17:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbrddcdx.h
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed bug in hb_cdxFieldIndex
    * minor modification in some #define macros to allow easy change
      in CDX page size

  * xharbour/source/rdd/dbcmd.c
    * fixed minor typo in source code - no changes in final binaries

2004-08-22 19:20 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * source/rtl/gtwvt/gtwvt.c
    * added support for K_CTRL_SH_TAB
  + source/vm/optcon/Makefile
  + source/vm/optgui/Makefile
    * optgui and optcon created for gnu/make system

2004-08-21 19:25 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * source/compiler/gencobj.c
    * Cleanup and added some printfs to help to debug -go mode
  + contrib/xwt/src/notebook.prg 
  + contrib/src/xwt_gtk/xwt_gtk_notebook.c
    * added notebook (folder) widget
  + contrib/xwt/src/editbox.prg
  + contrib/src/xwt_gtk/xwt_gtk_editbox.c
    * added editbox (text_view) widget with scrollbars
  * contrib/xwt/src/xwt_gtk/xwt_gtk.c
  * contrib/xwt/src/xwt_gtk/xwt_gtk.h
  * contrib/xwt/include/xwt.ch
    * added support of new widgets
  * contrib/xwt/xwt_gtk/xwt_gtk_textbox.c
    * xwt_createTextbox renamed to xwt_createTextBox
  * contrib/xwt/test/xwt_text.prg
    * added the new widgets to the test
  * contrib/pgsql/makefile
    * added include dir for mingw32

2004-08-21 11:20 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/dbf1.c
    * This is a first - Removed a couple of casts!
